chore: add Skyhook prefix to action name for marketplace uniqueness

--- a/action.yml
+++ b/action.yml
@@ -1,4 +1,4 @@
-name: 'Resolve Job Template'
+name: 'Skyhook Resolve Job Template'
 description: 'Resolves Kubernetes job/template resource name by label discovery'
 author: 'Skyhook'
 
